--- a/src/styles.css
+++ b/src/styles.css
@@ -234,3 +234,28 @@ body.dark-theme {
 .button__icon {
 	margin-right: 8px;
 }
+
+.notification-container {
+	width: 300px;
+	height: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: green;
+	border-radius: 5px;
+	position: fixed;
+	right: 50px;
+	bottom: 50px;
+	transition: transform 450ms var(--timing-function),
+		opacity 350ms var(--timing-function);
+}
+
+.visibility-hidden {
+	transform: translateX(600px);
+	opacity: 0;
+}
+
+.notification-text {
+	pointer-events: none;
+	color: white;
+}
